--- a/.config
+++ b/.config
@@ -461,7 +461,7 @@ CONFIG_KERNEL_IPV6_PIMSM_V2=y
 CONFIG_KERNEL_IPV6_SEG6_LWTUNNEL=y
 # CONFIG_KERNEL_LWTUNNEL_BPF is not set
 # CONFIG_KERNEL_NET_L3_MASTER_DEV is not set
-# CONFIG_KERNEL_PAGE_POOL is not set
+CONFIG_KERNEL_PAGE_POOL=y
 # CONFIG_KERNEL_IP_PNP is not set
 
 #
@@ -2725,6 +2725,7 @@ CONFIG_PACKAGE_wireless-tools=y
 # CONFIG_PACKAGE_zabbix-agentd is not set
 # CONFIG_PACKAGE_zabbix-agentd-gnutls is not set
 # CONFIG_PACKAGE_zabbix-agentd-openssl is not set
+# CONFIG_PACKAGE_zabbix-extra-mac80211 is not set
 # CONFIG_PACKAGE_zabbix-extra-network is not set
 # CONFIG_PACKAGE_zabbix-extra-wifi is not set
 # CONFIG_PACKAGE_zabbix-get is not set
@@ -2824,6 +2825,7 @@ CONFIG_PACKAGE_htop=y
 # CONFIG_PACKAGE_lttng-tools is not set
 # CONFIG_PACKAGE_m4 is not set
 # CONFIG_PACKAGE_make is not set
+# CONFIG_PACKAGE_mt76-test is not set
 # CONFIG_PACKAGE_objdump is not set
 # CONFIG_PACKAGE_packr is not set
 # CONFIG_PACKAGE_patch is not set
@@ -3043,7 +3045,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_ti-3410-firmware is not set
 # CONFIG_PACKAGE_ti-5052-firmware is not set
 # CONFIG_PACKAGE_wil6210-firmware is not set
-# CONFIG_PACKAGE_wireless-regdb is not set
+CONFIG_PACKAGE_wireless-regdb=y
 # CONFIG_PACKAGE_wl12xx-firmware is not set
 # CONFIG_PACKAGE_wl18xx-firmware is not set
 # end of Firmware
@@ -3127,11 +3129,11 @@ CONFIG_PACKAGE_kmod-crypto-aead=y
 CONFIG_PACKAGE_kmod-crypto-arc4=y
 CONFIG_PACKAGE_kmod-crypto-authenc=y
 # CONFIG_PACKAGE_kmod-crypto-cbc is not set
-# CONFIG_PACKAGE_kmod-crypto-ccm is not set
+CONFIG_PACKAGE_kmod-crypto-ccm=y
 # CONFIG_PACKAGE_kmod-crypto-chacha20poly1305 is not set
-# CONFIG_PACKAGE_kmod-crypto-cmac is not set
+CONFIG_PACKAGE_kmod-crypto-cmac=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
-# CONFIG_PACKAGE_kmod-crypto-ctr is not set
+CONFIG_PACKAGE_kmod-crypto-ctr=y
 # CONFIG_PACKAGE_kmod-crypto-cts is not set
 # CONFIG_PACKAGE_kmod-crypto-deflate is not set
 # CONFIG_PACKAGE_kmod-crypto-des is not set
@@ -3140,11 +3142,11 @@ CONFIG_PACKAGE_kmod-crypto-ecb=y
 # CONFIG_PACKAGE_kmod-crypto-echainiv is not set
 # CONFIG_PACKAGE_kmod-crypto-essiv is not set
 # CONFIG_PACKAGE_kmod-crypto-fcrypt is not set
-# CONFIG_PACKAGE_kmod-crypto-gcm is not set
-# CONFIG_PACKAGE_kmod-crypto-gf128 is not set
-# CONFIG_PACKAGE_kmod-crypto-ghash is not set
+CONFIG_PACKAGE_kmod-crypto-gcm=y
+CONFIG_PACKAGE_kmod-crypto-gf128=y
+CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-hash=y
-# CONFIG_PACKAGE_kmod-crypto-hmac is not set
+CONFIG_PACKAGE_kmod-crypto-hmac=y
 # CONFIG_PACKAGE_kmod-crypto-hw-eip93 is not set
 # CONFIG_PACKAGE_kmod-crypto-hw-hifn-795x is not set
 # CONFIG_PACKAGE_kmod-crypto-hw-padlock is not set
@@ -3161,10 +3163,10 @@ CONFIG_PACKAGE_kmod-crypto-manager=y
 CONFIG_PACKAGE_kmod-crypto-null=y
 # CONFIG_PACKAGE_kmod-crypto-pcbc is not set
 # CONFIG_PACKAGE_kmod-crypto-rmd160 is not set
-# CONFIG_PACKAGE_kmod-crypto-rng is not set
-# CONFIG_PACKAGE_kmod-crypto-seqiv is not set
+CONFIG_PACKAGE_kmod-crypto-rng=y
+CONFIG_PACKAGE_kmod-crypto-seqiv=y
 CONFIG_PACKAGE_kmod-crypto-sha1=y
-# CONFIG_PACKAGE_kmod-crypto-sha256 is not set
+CONFIG_PACKAGE_kmod-crypto-sha256=y
 # CONFIG_PACKAGE_kmod-crypto-sha512 is not set
 # CONFIG_PACKAGE_kmod-crypto-test is not set
 CONFIG_PACKAGE_kmod-crypto-user=y
@@ -3613,7 +3615,14 @@ CONFIG_PACKAGE_kmod-mtk-hnat=y
 #
 # CONFIG_PACKAGE_kmod-atm is not set
 # CONFIG_PACKAGE_kmod-ax25 is not set
-# CONFIG_PACKAGE_kmod-batman-adv is not set
+CONFIG_PACKAGE_kmod-batman-adv=y
+CONFIG_BATMAN_ADV_BATMAN_V=y
+CONFIG_BATMAN_ADV_BLA=y
+CONFIG_BATMAN_ADV_DAT=y
+# CONFIG_BATMAN_ADV_NC is not set
+CONFIG_BATMAN_ADV_MCAST=y
+# CONFIG_BATMAN_ADV_DEBUG is not set
+# CONFIG_BATMAN_ADV_TRACING is not set
 # CONFIG_PACKAGE_kmod-bonding is not set
 # CONFIG_PACKAGE_kmod-bpf-test is not set
 # CONFIG_PACKAGE_kmod-dnsresolver is not set
@@ -3954,91 +3963,19 @@ CONFIG_PACKAGE_kmod-qmi_wwan_q=y
 # CONFIG_PACKAGE_kmod-brcmsmac is not set
 # CONFIG_PACKAGE_kmod-brcmutil is not set
 # CONFIG_PACKAGE_kmod-carl9170 is not set
-# CONFIG_PACKAGE_kmod-cfg80211 is not set
+CONFIG_PACKAGE_kmod-cfg80211=y
+# CONFIG_PACKAGE_CFG80211_TESTMODE is not set
 # CONFIG_PACKAGE_kmod-iwlwifi is not set
-# CONFIG_PACKAGE_kmod-mac80211 is not set
+CONFIG_PACKAGE_kmod-mac80211=y
+CONFIG_PACKAGE_MAC80211_DEBUGFS=y
+# CONFIG_PACKAGE_MAC80211_TRACING is not set
+CONFIG_PACKAGE_MAC80211_MESH=y
 # CONFIG_PACKAGE_kmod-mac80211-hwsim is not set
 # CONFIG_PACKAGE_kmod-mt76 is not set
+CONFIG_PACKAGE_kmod-mt76-core=y
 # CONFIG_PACKAGE_kmod-mt7601u is not set
-# CONFIG_PACKAGE_kmod-mt7603 is not set
-CONFIG_PACKAGE_kmod-mt7603e=y
-CONFIG_MT7603E_FIRST_IF_MT7603E=y
-CONFIG_MT7603E_RLT_WIFI=y
-CONFIG_MT7603E_MT_WIFI_PATH="rlt_wifi"
-
-#
-# WiFi Generic Feature Options
-#
-CONFIG_MT7603E_FIRST_IF_EEPROM_FLASH=y
-# CONFIG_MT7603E_FIRST_IF_EEPROM_PROM is not set
-# CONFIG_MT7603E_FIRST_IF_EEPROM_EFUSE is not set
-CONFIG_MT7603E_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MT7603E_MULTI_INF_SUPPORT=y
-CONFIG_MT7603E_WSC_INCLUDED=y
-# CONFIG_MT7603E_WSC_NFC_SUPPORT is not set
-CONFIG_MT7603E_DOT11N_DRAFT3=y
-CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
-# CONFIG_MT7603E_TXBF_SUPPORT is not set
-CONFIG_MT7603E_LLTD_SUPPORT=y
-# CONFIG_MT7603E_QOS_DLS_SUPPORT is not set
-# CONFIG_MT7603E_WAPI_SUPPORT is not set
-# CONFIG_MT7603E_CARRIER_DETECTION_SUPPORT is not set
-# CONFIG_MT7603E_IGMP_SNOOP_SUPPORT is not set
-# CONFIG_MT7603E_BLOCK_NET_IF is not set
-CONFIG_MT7603E_NEW_RATE_ADAPT_SUPPORT=y
-CONFIG_MT7603E_MT_NEW_RATE_ADAPT_SUPPORT=y
-# CONFIG_MT7603E_IDS_SUPPORT is not set
-# CONFIG_MT7603E_WIFI_WORK_QUEUE is not set
-# CONFIG_MT7603E_WIFI_SKB_RECYCLE is not set
-CONFIG_MT7603E_RTMP_FLASH_SUPPORT=y
-CONFIG_MT7603E_LED_CONTROL_SUPPORT=y
-# CONFIG_MT7603E_SINGLE_SKU is not set
-CONFIG_MT7603E_ATE_SUPPORT=y
-CONFIG_MT7603E_RT2860V2_AP_V24_DATA_STRUCTURE=y
-# CONFIG_MT7603E_MEMORY_OPTIMIZATION is not set
-# CONFIG_MT7603E_HOTSPOT is not set
-# CONFIG_MT7603E_MT_RTMP_TEMPERATURE_TX_ALC is not set
-CONFIG_MT7603E_UAPSD=y
-# CONFIG_MT7603E_RLT_MAC is not set
-CONFIG_MT7603E_RTMP_PCI_SUPPORT=y
-# end of WiFi Generic Feature Options
-
-#
-# WiFi Operation Modes
-#
-CONFIG_MT7603E_MT_WIFI_MODE_AP=y
-# CONFIG_MT7603E_MT_WIFI_MODE_STA is not set
-# CONFIG_MT7603E_MT_WIFI_MODE_BOTH is not set
-CONFIG_MT7603E_RLT_AP_SUPPORT=y
-# CONFIG_MT7603E_WDS_SUPPORT is not set
-CONFIG_MT7603E_MBSS_SUPPORT=y
-# CONFIG_MT7603E_NEW_MBSSID_MODE is not set
-# CONFIG_MT7603E_CFG80211_SUPPORT is not set
-# CONFIG_MT7603E_ALL_NET_EVENT is not set
-# CONFIG_MT7603E_ACL_V2_SUPPORT is not set
-CONFIG_MT7603E_APCLI_SUPPORT=y
-CONFIG_MT7603E_MULTI_APCLI_SUPPORT=y
-CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
-# CONFIG_MT7603E_AIRPLAY_SUPPORT is not set
-# CONFIG_MT7603E_DFS_SUPPORT is not set
-# CONFIG_MT7603E_NINTENDO_AP is not set
-# CONFIG_MT7603E_COC_SUPPORT is not set
-# CONFIG_MT7603E_MCAST_RATE_SPECIFIC is not set
-# CONFIG_MT7603E_PREVENT_ARP_SPOOFING_SUPPORT is not set
-# CONFIG_MT7603E_MULTI_CORE_SUPPORT is not set
-# CONFIG_MT7603E_SNIFFER_SUPPORT is not set
-# CONFIG_MT7603E_DOT11R_FT_SUPPORT is not set
-# CONFIG_MT7603E_DOT11K_RRM_SUPPORT is not set
-# CONFIG_MT7603E_WNM_SUPPORT is not set
-# CONFIG_MT7603E_BAND_STEERING_7603 is not set
-# CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT is not set
-# CONFIG_MT7603E_WPA3_SUPPORT is not set
-# CONFIG_MT7603E_OWE_SUPPORT is not set
-CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
-# end of WiFi Operation Modes
-
-CONFIG_MT7603E_RALINK_MT7603E=y
-CONFIG_MT7603E_MT_MAC=y
+CONFIG_PACKAGE_kmod-mt7603=y
+# CONFIG_PACKAGE_kmod-mt7603e is not set
 # CONFIG_PACKAGE_kmod-mt7615-firmware is not set
 # CONFIG_PACKAGE_kmod-mt7615d is not set
 # CONFIG_MTK_CHIP_MT7615E is not set
@@ -4049,21 +3986,12 @@ CONFIG_MT7603E_MT_MAC=y
 # CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
 # CONFIG_PACKAGE_kmod-mt7663s is not set
 # CONFIG_PACKAGE_kmod-mt7663u is not set
+CONFIG_PACKAGE_kmod-mt76x02-common=y
 # CONFIG_PACKAGE_kmod-mt76x0e is not set
 # CONFIG_PACKAGE_kmod-mt76x0u is not set
-# CONFIG_PACKAGE_kmod-mt76x2 is not set
-CONFIG_PACKAGE_kmod-mt76x2e=y
-CONFIG_MT76X2E_RT_SECOND_IF_MT7612E=y
-CONFIG_MT76X2E_RT_FIRST_CARD=7603
-CONFIG_MT76X2E_RT_SECOND_CARD=7612
-CONFIG_MT76X2E_AP_LED=y
-CONFIG_MT76X2E_AP_LLTD=y
-CONFIG_MT76X2E_AP_WDS=y
-CONFIG_MT76X2E_AP_MBSS=y
-CONFIG_MT76X2E_AP_MBSS_NEW_MBSSID_MODE=y
-CONFIG_MT76X2E_AP_APCLI=y
-CONFIG_MT76X2E_AP_80211AC_VHT=y
-# CONFIG_MT76X2E_AP_TXBF_SUPPORT is not set
+CONFIG_PACKAGE_kmod-mt76x2=y
+CONFIG_PACKAGE_kmod-mt76x2-common=y
+# CONFIG_PACKAGE_kmod-mt76x2e is not set
 # CONFIG_PACKAGE_kmod-mt76x2u is not set
 # CONFIG_PACKAGE_kmod-mt7915-firmware is not set
 # CONFIG_PACKAGE_kmod-mt7915e is not set
@@ -5369,7 +5297,7 @@ CONFIG_PACKAGE_libffi=y
 # CONFIG_PACKAGE_libftdi is not set
 # CONFIG_PACKAGE_libftdi1 is not set
 # CONFIG_PACKAGE_libgabe is not set
-# CONFIG_PACKAGE_libgcrypt is not set
+CONFIG_PACKAGE_libgcrypt=y
 CONFIG_PACKAGE_libgd=y
 # CONFIG_LIBGD_TIFF is not set
 # CONFIG_LIBGD_FREETYPE is not set
@@ -5378,7 +5306,7 @@ CONFIG_PACKAGE_libgd=y
 # CONFIG_PACKAGE_libgee is not set
 CONFIG_PACKAGE_libgmp=y
 # CONFIG_PACKAGE_libgnurl is not set
-# CONFIG_PACKAGE_libgpg-error is not set
+CONFIG_PACKAGE_libgpg-error=y
 # CONFIG_PACKAGE_libgpgme is not set
 # CONFIG_PACKAGE_libgpgmepp is not set
 # CONFIG_PACKAGE_libgphoto2 is not set
@@ -5789,7 +5717,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
 # CONFIG_PACKAGE_luci-app-dynapoint is not set
 # CONFIG_PACKAGE_luci-app-e2guardian is not set
-# CONFIG_PACKAGE_luci-app-easymesh is not set
+CONFIG_PACKAGE_luci-app-easymesh=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-frpc is not set
@@ -6046,6 +5974,8 @@ CONFIG_PACKAGE_luci-i18n-design-config-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-design-config-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-diskman-zh-tw is not set
+CONFIG_PACKAGE_luci-i18n-easymesh-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-easymesh-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-ca is not set
 # CONFIG_PACKAGE_luci-i18n-firewall-cs is not set
@@ -7095,25 +7025,33 @@ CONFIG_PACKAGE_wifischedule=y
 # CONFIG_PACKAGE_hostapd-basic-mbedtls is not set
 # CONFIG_PACKAGE_hostapd-basic-openssl is not set
 # CONFIG_PACKAGE_hostapd-basic-wolfssl is not set
-# CONFIG_PACKAGE_hostapd-common is not set
+CONFIG_PACKAGE_hostapd-common=y
 # CONFIG_PACKAGE_hostapd-mbedtls is not set
 # CONFIG_PACKAGE_hostapd-mini is not set
 # CONFIG_PACKAGE_hostapd-openssl is not set
+# CONFIG_PACKAGE_hostapd-utils is not set
 # CONFIG_PACKAGE_hostapd-wolfssl is not set
 # CONFIG_PACKAGE_hs20-client is not set
 # CONFIG_PACKAGE_hs20-common is not set
 # CONFIG_PACKAGE_hs20-server is not set
+# CONFIG_PACKAGE_wpa-cli is not set
 # CONFIG_PACKAGE_wpa-supplicant is not set
+# CONFIG_WPA_RFKILL_SUPPORT is not set
+CONFIG_WPA_MSG_MIN_PRIORITY=3
 # CONFIG_WPA_WOLFSSL is not set
 # CONFIG_DRIVER_WEXT_SUPPORT is not set
-# CONFIG_DRIVER_11AC_SUPPORT is not set
+CONFIG_DRIVER_11AC_SUPPORT=y
 # CONFIG_DRIVER_11AX_SUPPORT is not set
 # CONFIG_WPA_ENABLE_WEP is not set
 # CONFIG_WPA_MBO_SUPPORT is not set
 # CONFIG_PACKAGE_wpa-supplicant-basic is not set
 # CONFIG_PACKAGE_wpa-supplicant-mbedtls is not set
+# CONFIG_PACKAGE_wpa-supplicant-mesh-mbedtls is not set
+# CONFIG_PACKAGE_wpa-supplicant-mesh-openssl is not set
+# CONFIG_PACKAGE_wpa-supplicant-mesh-wolfssl is not set
 # CONFIG_PACKAGE_wpa-supplicant-mini is not set
 # CONFIG_PACKAGE_wpa-supplicant-openssl is not set
+# CONFIG_PACKAGE_wpa-supplicant-p2p is not set
 # CONFIG_PACKAGE_wpa-supplicant-wolfssl is not set
 # CONFIG_PACKAGE_wpad is not set
 # CONFIG_PACKAGE_wpad-basic is not set
@@ -7121,8 +7059,11 @@ CONFIG_PACKAGE_wifischedule=y
 # CONFIG_PACKAGE_wpad-basic-openssl is not set
 # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
 # CONFIG_PACKAGE_wpad-mbedtls is not set
+# CONFIG_PACKAGE_wpad-mesh-mbedtls is not set
+# CONFIG_PACKAGE_wpad-mesh-openssl is not set
+# CONFIG_PACKAGE_wpad-mesh-wolfssl is not set
 # CONFIG_PACKAGE_wpad-mini is not set
-# CONFIG_PACKAGE_wpad-openssl is not set
+CONFIG_PACKAGE_wpad-openssl=y
 # CONFIG_PACKAGE_wpad-wolfssl is not set
 # end of WirelessAPD
 
@@ -7156,7 +7097,7 @@ CONFIG_PACKAGE_acme=y
 # CONFIG_PACKAGE_atlas-sw-probe-rpc is not set
 # CONFIG_PACKAGE_baidupcs-web is not set
 # CONFIG_PACKAGE_banip is not set
-# CONFIG_PACKAGE_batctl-default is not set
+CONFIG_PACKAGE_batctl-default=y
 # CONFIG_PACKAGE_batctl-full is not set
 # CONFIG_PACKAGE_batctl-tiny is not set
 # CONFIG_PACKAGE_beanstalkd is not set
@@ -7174,7 +7115,7 @@ CONFIG_PACKAGE_acme=y
 # CONFIG_PACKAGE_cshark is not set
 # CONFIG_PACKAGE_daemonlogger is not set
 # CONFIG_PACKAGE_darkstat is not set
-# CONFIG_PACKAGE_dawn is not set
+CONFIG_PACKAGE_dawn=y
 # CONFIG_PACKAGE_dhcpcd is not set
 # CONFIG_PACKAGE_dmapd is not set
 # CONFIG_PACKAGE_dnscrypt-proxy2 is not set
@@ -7227,7 +7168,7 @@ CONFIG_PACKAGE_ipset=y
 # CONFIG_PACKAGE_iputils-tracepath is not set
 # CONFIG_PACKAGE_ipvsadm is not set
 # CONFIG_PACKAGE_irtt is not set
-# CONFIG_PACKAGE_iw is not set
+CONFIG_PACKAGE_iw=y
 # CONFIG_PACKAGE_iw-full is not set
 # CONFIG_PACKAGE_jool-tools-netfilter is not set
 # CONFIG_PACKAGE_keepalived is not set
@@ -7388,7 +7329,7 @@ CONFIG_PACKAGE_uclient-fetch=y
 # CONFIG_PACKAGE_udptunnel is not set
 # CONFIG_PACKAGE_udpxy is not set
 # CONFIG_PACKAGE_ulogd is not set
-# CONFIG_PACKAGE_umdns is not set
+CONFIG_PACKAGE_umdns=y
 # CONFIG_PACKAGE_usbip is not set
 # CONFIG_PACKAGE_usteer is not set
 # CONFIG_PACKAGE_uugamebooster is not set
